src/containers/App.module.css
.App {
  text-align: center;
}
/*
--------------------------------
-------- GLOBAL SECTION --------
--------------------------------
*/
* {
  margin: 0;
  padding: 0;
}

:root {
  --accent-color: #ff8a47;
  
  --btn-hover-color: #e77e41;
  --btn-text-color: #f3f3f3;

  --textbox-bg-color: #f9f8f8;
  --textbox-outline-color: #9f9f9f;

  --border-bottom-size: 2px;

}

html,body {
  box-sizing: border-box;
  border: 1px solid rgb(80, 223, 241);
}

a {
  text-decoration: none;
  color: black;
  padding-bottom: 5px;
}

a:hover {
  border-bottom: 2px solid var(--accent-color);
}

button {
  font-size: 25px;
  color: var(--btn-text-color);
  background-color: var(--accent-color);
  width: auto;
  height: auto;
  cursor: pointer;
  padding: 15px;
  border-radius: 5px;
}

button:hover {
  background-color: var(--btn-hover-color);
}

header {
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto 1fr;
  grid-template-areas:
  'navbar navbar'
  'page-title .';

  background: url(../assets/header-bg.png) no-repeat center;
  background-size: cover;
}

section {
  margin-top: 100px;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  row-gap: 50px;
  justify-items: center;
}
/*
--------------------------------
-------- CUSTOM/REUSABLE CSS --------
--------------------------------
*/

.sectionTitle {
  font-size: 50px;
  border-bottom: 2px solid var(--accent-color);
  padding-bottom: 5px;
  padding: 0 5px;  
}

.textbox {
  background-color: var(--textbox-bg-color);
  border: 2px solid var(--textbox-outline-color);
  line-height: 1.5em;
  border-radius: 5px;
  padding: 20px;
  max-width: 50%;
  text-align: center;
}

/*
--------------------------------
-------- HEADER SECTION --------
--------------------------------
*/

/*
----- NAVBAR------
*/
.navbar {
  grid-area: navbar;
  display: grid;
  grid-template-columns: .5fr 1fr;
  font-size: 24px;
}

.navbar img {
  margin-left: 20px;
}

.navbar ul {
  display: flex;
  flex-direction: row;
  margin: auto 0;
  list-style-type: none;
  justify-content: space-evenly;
}

/*
----- HEADER TITLE -----
*/

.pageTitle {
  grid-area: page-title;
  text-align: left;
}

.pageTitle div {
  display: grid;
  grid-template-columns: 1fr;
  font-size: 200%;
  justify-items: start;
  margin-top: 20%;
  margin-left: 25%;
  row-gap: 30%;
}

/*
--------------------------------
-------- ABOUT SECTION --------
--------------------------------
*/

/* .aboutSection {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  row-gap: 50px;
  justify-items: center;
} */

/*
-------------------------------------
--------  TECHNOLOGY SECTION --------
-------------------------------------
*/

